DA signer stat OpenAPI 4.
